BUG 10775: Made the legend collapsable again. Added transparency. Made flyouts close if you click outside of them.
QA: As noted in bug notes.

--- a/app/styles/render-type-images.sass
+++ b/app/styles/render-type-images.sass
@@ -28,9 +28,8 @@
 .blistopenLayersZoomBar
   background: transparent url(/stylesheets/images/interface/zoom_gutter.png) no-repeat
 
-.olPopup
-  .olPopupCloseBox
-    background: transparent url(/stylesheets/images/icons/menu_icons.png?3) no-repeat
-    background-position: 0 -507px
-    margin-right: -8px
-    margin-top: -4px
+.olPopup .olPopupCloseBox, .mapOverview .close_button
+  background: transparent url(/stylesheets/images/icons/menu_icons.png?3) no-repeat
+  background-position: 0 -507px
+  margin-right: -8px
+  margin-top: -4px
